--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* --- Custom Breadcrumb CSS --- */
+.custom-breadcrumb-item {
+  clip-path: polygon(0% 0%, calc(100% - 15px) 0%, 100% 50%, calc(100% - 15px) 100%, 0% 100%);
+  margin-right: 15px; 
+}
